--- a/README.org
+++ b/README.org
@@ -1,7 +1,8 @@
 * El Gantt – A Gantt chart/calendar for Orgmode
 
 El Gantt creates a Gantt calendar from your orgmode files. It provides a flexible customization system with the goal of being adaptable to multiple purposes. 
-[[
+
+[[file:screenshots/output-2020-07-20-14:22:01.gif]]
 ** Installation
 Install the dependencies:
 - [[https://github.com/alphapapa/org-ql][org-ql]]
